Sai Teja Commit

--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -35,7 +35,7 @@
       <span style="font-size: 10px;display: flex;">{{role}}</span>
       <div [ngClass]="{'dropdown-menu': true, 'visible': dropdownVisible}">
         <div class="dropdown-content">
-          <a routerLink="/member/profile">Profile</a>
+          <a routerLink="/admin/profile">Profile</a>
           <a href="#" (click)="logout()">Logout</a>
         </div>
       </div>
