--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -1,6 +1,6 @@
 <div class="book-list-container">
   <div class="intro-section">
-    <h1 class="main-heading">Welcome to My Library</h1>
+    <h1 class="main-heading">Welcome to BookHub</h1>
     <p>
       Whether you're here to borrow your next favorite book, track your reading history, or simply discover something new, we're thrilled to have you join our community!
       <br><br>
